# hector_grid_map_compression

./: CMakeLists.txt  README.md  package.xml
hector_grid_map_compression/: CMakeLists.txt  nodelet_plugins.xml  package.xml
hector_grid_map_compression/include/hector_grid_map_compression/: client.h  compression.h  compression_client.h  compression_server.h  server.h
hector_grid_map_compression/launch/: client_node.launch  compression_client.launch  compression_server.launch  server_node.launch  server_nodelet.launch
hector_grid_map_compression/src/: client.cpp  client_node.cpp  compression.cpp  compression_client.cpp  compression_server.cpp  server.cpp  server_node.cpp  server_nodelet.cpp
hector_grid_map_compression_msgs/: CMakeLists.txt  package.xml
hector_grid_map_compression_msgs/msg/: CompressedGridLayer.msg
hector_grid_map_compression_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
hector_grid_map_compression_rviz_plugin/include/hector_grid_map_compression_rviz_plugin/: GridMapColorMaps.hpp  GridMapDisplay.hpp  GridMapVisual.hpp
hector_grid_map_compression_rviz_plugin/include/hector_grid_map_compression_rviz_plugin/modified/: frame_manager.h  message_filter_display.h
hector_grid_map_compression_rviz_plugin/src/: GridMapDisplay.cpp  GridMapVisual.cpp
include/hector_grid_map_compression/: compression_client.h  compression_server.h
launch/: compression_client.launch  compression_server.launch
msg/: CompressedGridMap.msg  GridLayer.msg  GridMap.msg
src/: compression_client.cpp  compression_server.cpp
