<?xml version="1.0"?>
<package format="2">
    <name>hector_grid_map_compression_msgs</name>
    <version>1.0.0</version>
    <description>
        Messages for compressed grid maps.
    </description>

    <maintainer email="jonathan.lichtenfeld@gmail.com">Jonathan Lichtenfeld</maintainer>

    <license>MIT</license>

    <!-- dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>grid_map_msgs</build_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>grid_map_msgs</exec_depend>

</package>
