<?xml version="1.0"?>
<package format="2">
  <name>hector_grid_map_compression_rviz_plugin</name>
  <version>1.7.12</version>
  <description>RViz plugin for displaying compressed grid map messages.</description>
  <!-- <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer> -->
  <!-- <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer> -->
  <maintainer email="lichtenfeld@sim.tu-darmstadt.de">Jonathan Lichtenfeld</maintainer>
  <license>BSD</license>
  <author email="philipp.kruesi@mavt.ethz.ch">Philipp Krüsi</author>
  <author>Péter Fankhauser</author>

  <buildtool_depend>catkin</buildtool_depend>
<!--   <build_depend>cmake_clang_tools</build_depend> -->
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>hector_grid_map_compression</build_depend>
  <build_depend>hector_grid_map_compression_msgs</build_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>grid_map_ros</exec_depend>
  <exec_depend>grid_map_msgs</exec_depend>
  <exec_depend>hector_grid_map_compression</exec_depend>
  <exec_depend>hector_grid_map_compression_msgs</exec_depend>
<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>
  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>